--- a/pipeline/buildspec_integration_test.yml
+++ b/pipeline/buildspec_integration_test.yml
@@ -12,4 +12,6 @@ phases:
       # trigger the integration tests here
       - echo 'Running integration tests'
       - aws s3 sync --no-progress s3://${TEST_PHOTO_IMAGE_BUCKET_PATH} data/images
+      - . ./pipeline/assume-role.sh ${CROSS_ACCOUNT_ROLE} ${STACK_NAME}-IntegrationTests
+      - aws sts get-caller-identity
       - pipenv run make integ-test
