Instrument and enable all functions for x-ray
Just doing the basic setup. Will add more as I better understand x-ray

--- a/template.yaml
+++ b/template.yaml
@@ -26,7 +26,7 @@ Parameters:
   XRayTracingMode:
     Type: String
     Description: "AWS XRay tracing mode"
-    Default: PassThrough
+    Default: Active
     AllowedValues:
       - Active
       - PassThrough
