make running tests more verbose

--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,6 @@ dataclasses-jsonschema = "*"
 
 [scripts]
 #install-lambda-functions = "pipenv install -r src/requirements.txt"
-test = "pytest --cov src --cov-report term-missing --cov-fail-under 95 tests/unit"
+test = "pytest -vv --cov src --cov-report term-missing --cov-fail-under 95 tests/unit"
 flake8 = "flake8"
 lint = "pylint"
