--- a/Pipfile
+++ b/Pipfile
@@ -39,6 +39,6 @@ dataclasses-jsonschema = "*"
 #install-lambda-functions = "pipenv install -r src/requirements.txt"
 test = "pytest -vv --cov src --cov-report term-missing --cov-fail-under 95 tests"
 unit-test = "pytest -vv --cov src --cov-report term-missing --cov-fail-under 95 tests/unit"
-integ-test = "pytest -vv --cov src --cov-report term-missing --cov-fail-under 95 tests/integration"
+integ-test = "pytest -vv tests/integration"
 flake8 = "flake8"
 lint = "pylint"
