--- a/template.yaml
+++ b/template.yaml
@@ -520,7 +520,7 @@ Resources:
               account:
                 - !Ref AWS::AccountId
               detail-type:
-                - "Invoke:StateMachine:CreateJpeg"
+                - "PhotoOps::CreateJpeg::Invoke"
               detail:
                 s3_bucket:
                   - exists: true
@@ -528,6 +528,11 @@ Resources:
                   - exists: true
       Policies:
         - Statement:
+          - Effect: Allow
+            Action:
+              - "events:PutEvents"
+            Resource:
+              - !GetAtt EventBus.Arn
           - Effect: Allow
             Action:
               - "lambda:InvokeFunction"
@@ -595,7 +600,6 @@ Resources:
           Type: EventBridgeRule
           Properties:
             EventBusName: !Ref EventBus
-            InputPath: "$.detail"
             Pattern:
               detail-type:
                 - prefix: "AWS::DynamoDB"
@@ -608,7 +612,6 @@ Resources:
           Type: EventBridgeRule
           Properties:
             EventBusName: !Ref EventBus
-            InputPath: "$.detail"
             Pattern:
               detail-type:
                 - prefix: "AWS::DynamoDB::Batch"
