--- a/template.yaml
+++ b/template.yaml
@@ -623,6 +623,11 @@ Resources:
         - Statement:
           - Effect: Allow
             Action:
+              - "states:SendTaskSuccess"
+            Resource:
+              - '*'
+          - Effect: Allow
+            Action:
               - "dynamodb:PutItem"
               - "dynamodb:GetItem"
               - "dynamodb:UpdateItem"
