--- a/template.yaml
+++ b/template.yaml
@@ -556,6 +556,11 @@ Resources:
         - Statement:
           - Effect: Allow
             Action:
+              - "states:SendTaskSuccess"
+            Resource:
+              - '*'
+          - Effect: Allow
+            Action:
               - "events:PutEvents"
             Resource:
               - !GetAtt EventBus.Arn
